Mass changes to the original version of this feature. Took advantage of some of the research done by Josh Madewell and changes made by the YNAB team. Finally got the scrolling issue worked out but it's still a bit jumpy. However that I believe is an application issue and there isn't much we can do about it.

--- a/source/common/res/features/accounts-row-height/slim.css
+++ b/source/common/res/features/accounts-row-height/slim.css
@@ -6,7 +6,8 @@
 .ynab-grid-cell {
 	height: 1.2em !important;
 	top: 0 !important;
-	padding-top: 0.1em !important;
+	padding-top: 0 !important;
+	padding-bottom: 0 !important;
 	font-size: .90em !important;
 }
 
@@ -18,7 +19,7 @@
 .ynab-grid-body-row {
 	height: 1.4em !important;
 	top: 0 !important;
-	padding-top: 0.1em !important;
+	padding-top: 0 !important;
 }
 
 .ynab-grid-cell-checkbox
